# auctionProject

./: db.sqlite3  pyproject.toml
auctionProject/: settings.py  urls.py
auctions/: admin.py  forms.py  models.py  urls.py  views.py
auctions/migrations/: 0001_initial.py  0002_alter_auction_description.py
auctions/static/css/: styles.css
auctions/templates/auctions/: auction.html  categories.html  checkout.html  copy_index.html  create_auction.html  home.html  index.html  layout.html  login.html  register.html  watchlist.html
auctions/templatetags/auctions/: auction_tags.py
