[tool.poetry]
name = "auctionproject"
version = "0.1.0"
description = ""
authors = ["ann-bereza <annhavelia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
requests = "^2.31.0"
pillow = "^9.5.0"
django-ckeditor = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
